# MaterialsMap

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  fmap.ipynb  pyproject.toml  setting.npy  test_thermo_calc_script.py
.github/workflows/: lastCommit.yml  publishToPyPI.yaml
Simulation/06-19-2023-Cu-Ag-Al-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
Simulation/06-19-2023-Cu-Ag-Al-database-Ag-Al-Cu/Pycalphad/: ScheilPhaseHeatMap.tif
Simulation/06-19-2023-Cu-Ag-Al-database-Ag-Al-Cu/Thermo-calc/: Scheil Simulation\Result\ScheilResults.xlsx  ScheilPhaseHeatMap.tif
Simulation/06-20-2023-Cu-Ag-Al-database-Ag-Al-Cu/: setting.npy
Simulation/07-13-2023-SS304L-NiCr-V-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
fmap/: ref_data.py
fmap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fmap/core/: GenerateEqScript.py  GenerateScheilScript.py  ReadEqResult.py  ReadScheilResult.py  compositions.py  pycalphad_run.py
fmap/plot/: FeasibilityMap.py  feasibility_helpers.py
fmap/tests/: test_compositions.py  test_plotting.py  test_pycalphad_run.py  test_thermo_calc_script.py
fmap/tests/testsCaseFiles/: setting.npy
fmat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fmat/core/: GenerateEqScript.py  GenerateScheilScript.py  ML.py  ReadEqResult.py  ReadScheilResult.py  compositions.py  pycalphad_run.py
fmat/plot/: FeasibilityMap.py  ML_plot.py
fmat/tests/: test_compositions.py  test_plotting.py  test_pycalphad_run.py  test_thermo_calc_script.py
fmat/tests/testsCaseFiles/: composition_for_feasibilityMap.xlsx  setting.npy
materialsmap/core/: ReadScheilResult.py  istarmap.py
materialsmap/tests/: test_plotting.py  test_thermo_calc_script.py
tasks/: EqAnalyze&GenerateScheilScript-1.ipynb  eqheat.ipynb  fmap.ipynb  fmat.ipynb  q_sub  run.py
tasks/.ipynb_checkpoints/: fmap-checkpoint.ipynb
tasks/06-19-2023-Cu-Ag-Al-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/06-20-2023-Cu-Ag-Al-database-Ag-Al-Cu/Pycalphad/: .ScheilPhaseHeatMap.tif.icloud
tasks/Simulation/06-20-2023-Cu-Ag-Al-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx
tasks/Simulation/06-23-2023-Ag-Al-Cu-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx
tasks/Simulation/06-23-2023-NiCr-V-SS304L-database-TCFE8/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/06-24-2023-Ag-Al-Cu-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/06-26-2023-SS304L-NiCr-V-database-TCFE8/: composition_for_feasibilityMap.xlsx
tasks/Simulation/06-28-2023-AG-AL-CU-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/07-12-2023-Ag-Al-V-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/07-12-2023-SS304L-NiCr-V-database-Ag-Al-Cu/: .ML_results.tif.icloud  composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/07-13-2023-SS304L-NiCr-V-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/09-06-2023-Ag-Al-Cu-database-Ag-Al-Cu/: composition_for_feasibilityMap.xlsx  setting.npy
tasks/Simulation/5-31-2023-Fe-Cr-Ni-FEDEMO/: read.ipynb  (+2 more)
tests/: test_pycalphad_run.py
tests/testsCaseFiles/: setting.npy
(+12635 files in other folders)
