[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmat"
version = "0.1.0"
authors = [
  { name="Hui Sun", email="HuiSun@psu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "Feasibility MAP for materials design"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.6.2",
    "numpy<=1.20.3",
    "pycalphad<=0.9.2",
    "pandas>=2.0.2",
    "tqdm>=4.65.0",
    "scheil>=0.1.6",
    "scikit-learn>=0.24.1",
    "openpyxl>=3.1.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/HUISUN24/feasibility_map/issues"
