[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmat"
version = "0.2.0"
authors = [
  { name="Hui Sun", email="HuiSun@psu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "Feasibility mapper for MATerials design"
readme = "README.md"

requires-python = ">=3.8, <3.10"
dependencies = [
    "matplotlib<3.8",
    "numpy<=1.22",
    "pycalphad<=0.9.2",
    "pandas>=2.0.2",
    "tqdm>=4.65.0",
    "scheil>=0.1.6",
    "scikit-learn>=0.24.1",
    "openpyxl>=3.1.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/HUISUN24/fmat/issues"
